force-app/main/default/objects/Project__c/fields/Burn_Hours__c.field-meta.xml
<CustomField>
    <fullName>Burn_Hours__c</fullName>
    <formula
  >IF(Projected_Number_of_Hours__c &lt; 1 || Total_Time__c &lt; Projected_Number_of_Hours__c,0, Total_Time__c - Projected_Number_of_Hours__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hours over budget.</inlineHelpText>
    <label>Burn Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>