force-app/main/default/objects/Project__c/fields/Burn_Rate__c.field-meta.xml
<CustomField>
    <fullName>Burn_Rate__c</fullName>
    <formula
  >IF( Projected_Number_of_Hours__c &lt; 1,0, Total_Time__c/Projected_Number_of_Hours__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Burn Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>