force-app/main/default/objects/Project__c/fields/Burn_Rate_Notification__c.field-meta.xml
<CustomField>
    <fullName>Burn_Rate_Notification__c</fullName>
    <label>Burn Rate Notification</label>
    <type>Email</type>
</CustomField>