force-app/main/default/objects/Project__c/fields/External_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Project_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Project Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>