force-app/main/default/objects/Project__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Invoice Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>