force-app/main/default/objects/Project__c/fields/Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >This field will notate if this project has been invoiced</description>
    <label>Invoiced</label>
    <type>Checkbox</type>
</CustomField>