force-app/main/default/objects/Project__c/fields/Per_Hour_Rate__c.field-meta.xml
<CustomField>
    <fullName>Per_Hour_Rate__c</fullName>
    <label>Per Hour Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>