force-app/main/default/objects/Project__c/fields/Projected_Number_of_Hours__c.field-meta.xml
<CustomField>
    <fullName>Projected_Number_of_Hours__c</fullName>
    <label>Projected Number of Hours</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>