force-app/main/default/objects/Project__c/fields/Set_Cost__c.field-meta.xml
<CustomField>
    <fullName>Set_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set Cost</label>
    <type>Checkbox</type>
</CustomField>