force-app/main/default/objects/Project__c/fields/Set_Cost_Value__c.field-meta.xml
<CustomField>
    <fullName>Set_Cost_Value__c</fullName>
    <label>Set Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>