force-app/main/default/objects/Project__c/fields/Slack_Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Slack_Channel_Id__c</fullName>
    <description>The ID of the Slack Channel for this particular project</description>
    <externalId>true</externalId>
    <label>Slack Channel Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>