force-app/main/default/objects/Project__c/fields/SOW__c.field-meta.xml
<CustomField>
    <fullName>SOW__c</fullName>
    <label>SOW</label>
    <type>Url</type>
</CustomField>