force-app/main/default/objects/Project__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <color>#DDDDDD</color>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>R&amp;D</fullName>
                <color>#FF99FF</color>
                <label>R&amp;D</label>
            </value>
            <value>
                <fullName>Proposal</fullName>
                <color>#FF9966</color>
                <label>Proposal</label>
            </value>
            <value>
                <fullName>Development</fullName>
                <color>#FFCC33</color>
                <label>Development</label>
            </value>
            <value>
                <fullName>Q&amp;A</fullName>
                <color>#9999FF</color>
                <label>Q&amp;A</label>
            </value>
            <value>
                <fullName>Deployed</fullName>
                <color>#33CC00</color>
                <label>Deployed</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <color>#CC0000</color>
                <label>Cancelled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>