force-app/main/default/objects/Project__c/fields/Sub_Project__c.field-meta.xml
<CustomField>
    <fullName>Sub_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Sub Projects</relationshipLabel>
    <relationshipName>Sub_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>