force-app/main/default/objects/Project__c/fields/Total_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Time__c</fullName>
    <label>Total Time</label>
    <summarizedField>Time_Sheet_Entries__c.Sum_of_Time__c</summarizedField>
    <summaryForeignKey>Time_Sheet_Entries__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>