force-app/main/default/objects/Project__c/validationRules/Invoiced_and_Deployed.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoiced_and_Deployed</fullName>
    <active>false</active>
    <description
  >Can&apos;t Change the status if the project has been invoiced.</description>
    <errorConditionFormula
  >IF( Invoiced__c &amp;&amp; TEXT( Status__c ) = &quot;Deployed&quot;, TRUE , FALSE)</errorConditionFormula>
    <errorMessage
  >The project has already been invoiced. Talk to Finance to reject the invoice before editing the project</errorMessage>
</ValidationRule>