force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Expected_Completion_Date__c</columns>
    <columns>Total_Time__c</columns>
    <columns>Actual_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>