force-app/main/default/objects/Project__c/listViews/Open_Projects.listView-meta.xml
<ListView>
    <fullName>Open_Projects</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Expected_Completion_Date__c</columns>
    <columns>Total_Time__c</columns>
    <columns>Actual_Cost__c</columns>
    <columns>Burn_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Deployed</value>
    </filters>
    <label>Open Projects</label>
</ListView>