force-app/main/default/objects/Project__c/listViews/Projects_Not_Started.listView-meta.xml
<ListView>
    <fullName>Projects_Not_Started</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Expected_Completion_Date__c</columns>
    <columns>Total_Time__c</columns>
    <columns>Actual_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not Started</value>
    </filters>
    <label>Projects Not Started</label>
</ListView>